[metadata]
name = iter_together
version = 0.0.1-dev
description = A package that helps you iterate through parallel files
long_description = file: README.rst

url = https://github.com/cthoyt-reproducibility-1/iter-together

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

license = MIT
license_file = LICENSE

# Google "Python Trove Classifiers"
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
keywords =
    iteration
    file utilities

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
